# husk-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/studio/: package.json  vite.config.ts
apps/studio/client/: index.html
apps/studio/client/src/: App.tsx  index.css
apps/studio/client/src/components/: BrandMark.tsx  CommandPalette.tsx  CursorBanner.tsx  PageHeader.tsx  StatusPill.tsx  StudioLayout.tsx  Tile.tsx  WelcomeGate.tsx
apps/studio/client/src/components/inspector/: Inspector.tsx
apps/studio/client/src/components/timeline/: Timeline.tsx
apps/studio/client/src/lib/: api.ts  auth.ts
apps/studio/client/src/pages/: Dashboard.tsx  Onboarding.tsx  Replay.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx
examples/: README.md  langchain_agent.py  langgraph_thread.py  otel-autogen.py
packages-npm/husk-cursor-hook/: README.md  package.json  tsconfig.json
packages-npm/husk-cursor-hook/scripts/: build.mjs
packages-npm/husk-cursor-hook/src/: cli.ts  client.ts  hook.ts  install.ts  ping.ts
packages-npm/husk-cursor-hook/src/templates/: hooks.json
packages-npm/husk-vscode-hook/: README.md  package.json  tsconfig.json
packages-npm/husk-vscode-hook/scripts/: build.mjs
packages-npm/husk-vscode-hook/src/: extension.ts
